--- a/flex-e-grid-main/index.html
+++ b/flex-e-grid-main/index.html
@@ -27,8 +27,8 @@
             <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
         </nav>
     <main class="principal">
-        <h2 class="titulo">Início</h2>
-        <article class="cartao">
+        <h2 class="titulo-pagina">Início</h2>
+        <article class="cartao cartao--destaque">
             <img src="assets/img/banner-mobile_1.png" alt="" class="cartao__imagem">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em destaque</p>
@@ -37,6 +37,44 @@
                 <p class="cartao__info cartao__info--tempo">33 minutos</p>
                 <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assitir agora</button>
+            </div>
+        </article>
+        <section class="secao"></section>
+        <h3 class="titulo-secao">Vídeos mais vistos</h3>
+        <article class="cartao">
+            <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <p class="cartao__perfil">Bruno Lopez</p>
+                <h3 class="cartao__titulo">HZC - Título</h3>
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <button class="cartao__botao cartao__botao--play" arialabel="Assitir agora"></button>
+            </div>
+        </article>
+        <article class="cartao">
+            <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <p class="cartao__perfil">Bruno Lopez</p>
+                <h3 class="cartao__titulo">HZC - Título</h3>
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <button class="cartao__botao cartao__botao--play" arialabel="Assitir agora"></button>
+            </div>
+        </article>
+        <article class="cartao">
+            <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <p class="cartao__perfil">Bruno Lopez</p>
+                <h3 class="cartao__titulo">HZC - Título</h3>
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <button class="cartao__botao cartao__botao--play" arialabel="Assitir agora"></button>
+            </div>
+        </article>
+        <article class="cartao">
+            <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <p class="cartao__perfil">Bruno Lopez</p>
+                <h3 class="cartao__titulo">HZC - Título</h3>
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <button class="cartao__botao cartao__botao--play" arialabel="Assitir agora"></button>
             </div>
         </article>
     </main>
