--- a/flex-e-grid-main/index.html
+++ b/flex-e-grid-main/index.html
@@ -15,6 +15,7 @@
     <header class="cabecalho">
         <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
         <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="cabecalho__logo">
+        <p class="cabecalho__perfil">Bruno Lopes</p>
         <button class="cabecalho__notificacao" aria-label="Notificação"><i></i></button>
     </header>
         <nav class="menu-lateral" class="menu-lateral--ativo">
@@ -32,51 +33,166 @@
             <img src="assets/img/banner-mobile_1.png" alt="" class="cartao__imagem">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em destaque</p>
-                <h3 class="cartao__titulo">HZC - Título</h3>
-                <p class="cartao__perfil">Bruno Lopez</p>
+                <h3 class="cartao__titulo">HZC - Life.../2021</h3>
+                <p class="cartao__perfil">Bruno Lopes</p>
                 <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
+                <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assitir agora</button>
             </div>
         </article>
-        <section class="secao"></section>
+        <article class="cartao caratao--recentes">
+            <h3 class="cartao__tilulo">Vídeos Recentes</h3>
+            <a href="#" class="cartao__link">Ver todos</a>
+            <ul class="cartao__lista">
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                </li>
+            </ul>
+        </article>
+        <section class="secao">
         <h3 class="titulo-secao">Vídeos mais vistos</h3>
         <article class="cartao">
             <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
             <div class="cartao__conteudo">
-                <p class="cartao__perfil">Bruno Lopez</p>
-                <h3 class="cartao__titulo">HZC - Título</h3>
+                <p class="cartao__perfil">André Soares</p>
+                <h3 class="cartao__titulo">HZC - Tudo sem Padrin</h3>
                 <p class="cartao__info cartao__info--tempo">33 minutos</p>
                 <button class="cartao__botao cartao__botao--play" arialabel="Assitir agora"></button>
             </div>
         </article>
         <article class="cartao">
-            <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+            <img src="assets/img/video_2.png" alt="Vídeo" class="cartao__imagem">
             <div class="cartao__conteudo">
-                <p class="cartao__perfil">Bruno Lopez</p>
-                <h3 class="cartao__titulo">HZC - Título</h3>
+                <p class="cartao__perfil">Bruno Lopes</p>
+                <h3 class="cartao__titulo">HZC - Enter The Hu-flez</h3>
                 <p class="cartao__info cartao__info--tempo">33 minutos</p>
                 <button class="cartao__botao cartao__botao--play" arialabel="Assitir agora"></button>
             </div>
         </article>
         <article class="cartao">
-            <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+            <img src="assets/img/video_3.png" alt="Vídeo" class="cartao__imagem">
             <div class="cartao__conteudo">
-                <p class="cartao__perfil">Bruno Lopez</p>
-                <h3 class="cartao__titulo">HZC - Título</h3>
+                <p class="cartao__perfil">luiza Sampaio</p>
+                <h3 class="cartao__titulo">HZC - Vol.3</h3>
                 <p class="cartao__info cartao__info--tempo">33 minutos</p>
                 <button class="cartao__botao cartao__botao--play" arialabel="Assitir agora"></button>
             </div>
         </article>
         <article class="cartao">
-            <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+            <img src="assets/img/video_4.png" alt="Vídeo" class="cartao__imagem">
             <div class="cartao__conteudo">
-                <p class="cartao__perfil">Bruno Lopez</p>
-                <h3 class="cartao__titulo">HZC - Título</h3>
+                <p class="cartao__perfil">Bruno Lopes</p>
+                <h3 class="cartao__titulo">HZC - Love Machine</h3>
                 <p class="cartao__info cartao__info--tempo">33 minutos</p>
                 <button class="cartao__botao cartao__botao--play" arialabel="Assitir agora"></button>
             </div>
         </article>
+    </section>
+    <article class="cartao caratao--recentes">
+        <h3 class="cartao__tilulo">Vídeos Recentes</h3>
+        <a href="#" class="cartao__link">Ver todos</a>
+        <ul class="cartao__lista">
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+            <li class="cartao__item">
+                <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+                <p class="cartao__item-perfil">Bruno Lopes</p>
+            </li>
+        </ul>
+    </article>
+
+    <article class="cartao cartao--destaque">
+        <img src="assets/img/banner-mobile_2.png" alt="" class="cartao__imagem">
+        <div class="cartao__conteudo">
+            <p class="cartao__destaque">Nova arte</p>
+            <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <p class="cartao__info cartao__info--preco">33,33</p>
+            <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
+            <button class="cartao__botao cartao__botao--carrinho cartao__botao--destaque">Comprar agora</button>
+        </div>
+    
+    </article>
+    <section class="secao">
+    <h3 class="titulo-secao">Camisas mais recentes</h3>
+    <article class="cartao">
+        <img src="assets/img/produto_1.png" alt="Vídeo" class="cartao__imagem">
+        <div class="cartao__conteudo">
+            <p class="cartao__perfil">André Soares</p>
+            <h3 class="cartao__titulo">IBM</h3>
+            <p class="cartao__info cartao__info--preco">33,33</p>
+            <button class="cartao__botao cartao__botao--carrinho" arialabel="Adquirir agora"></button>
+        </div>
+    </article>
+    <article class="cartao">
+        <img src="assets/img/produto_2.png" alt="Vídeo" class="cartao__imagem">
+        <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">Huflez Crew Philosophy Club</h3>
+            <p class="cartao__info cartao__info--preco">33,33</p>
+            <button class="cartao__botao cartao__botao--carrinho" arialabel="Adquirir agora"></button>
+        </div>
+    </article>
+    <article class="cartao">
+        <img src="assets/img/produto_3.png" alt="Vídeo" class="cartao__imagem">
+        <div class="cartao__conteudo">
+            <p class="cartao__perfil">Luiza Sampaio</p>
+            <h3 class="cartao__titulo">Corujita noturna</h3>
+            <p class="cartao__info cartao__info--preco">33,33</p>
+            <button class="cartao__botao cartao__botao--carrinho" arialabel="Adquirir agora"></button>
+        </div>
+    </article>
+    <article class="cartao">
+        <img src="assets/img/produto_4.png" alt="Vídeo" class="cartao__imagem">
+        <div class="cartao__conteudo">
+            <p class="cartao__perfil">Bruno Lopes</p>
+            <h3 class="cartao__titulo">GGG - Gatin G Gorro</h3>
+            <p class="cartao__info cartao__info--preco">33,33</p>
+            <button class="cartao__botao cartao__botao--carrinho" arialabel="Adquirir agora"></button>
+        </div>
+    </article>
+</section>
     </main>
     <script src="index.js"></script>
 </body>
