--- a/flex-e-grid-main/index.html
+++ b/flex-e-grid-main/index.html
@@ -40,8 +40,8 @@
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assitir agora</button>
             </div>
         </article>
-        <article class="cartao caratao--recentes">
-            <h3 class="cartao__tilulo">Vídeos Recentes</h3>
+        <article class="cartao cartao--recentes">
+            <h3 class="cartao__titulo">Vídeos Recentes</h3>
             <a href="#" class="cartao__link">Ver todos</a>
             <ul class="cartao__lista">
                 <li class="cartao__item">
@@ -110,8 +110,8 @@
             </div>
         </article>
     </section>
-    <article class="cartao caratao--recentes">
-        <h3 class="cartao__tilulo">Vídeos Recentes</h3>
+    <article class="cartao cartao--recentes">
+        <h3 class="cartao__titulo">Vídeos Recentes</h3>
         <a href="#" class="cartao__link">Ver todos</a>
         <ul class="cartao__lista">
             <li class="cartao__item">
